# cExam

./: .gitignore  OversightOverTasks
new_oppgave_4/: main  makefile
new_oppgave_4/include/: eksamen_v24_oppgave4.h
new_oppgave_4/src/: eksamen_v24_oppgave4.c
old2_oppgave_6/: makefile
old2_oppgave_6/include/: newBeautifier.h  oppgave_6.h
old2_oppgave_6/src/: main.c  newBeautifier.c
old_oppgave_6/: CMakeLists.txt
old_oppgave_6/include/: beautifier.h  main.h  newBeautifier.h
old_oppgave_6/src/: beautifier.c  main.c
oppgave_2/: CMakeLists.txt  main  makefile
oppgave_2/include/: eksamen_v24_oppgave2_all_lower.h  eksamen_v24_oppgave2_all_upper.h  eksamen_v24_oppgave2_anagram.h  eksamen_v24_oppgave2_disjoint.h  eksamen_v24_oppgave2_heterogram.h  eksamen_v24_oppgave2_palindrom.h  main.h  program.h
oppgave_2/src/: eksamen_v24_oppgave2_all_lower.c  eksamen_v24_oppgave2_all_upper.c  eksamen_v24_oppgave2_anagram.c  eksamen_v24_oppgave2_disjoint.c  eksamen_v24_oppgave2_heterogram.c  eksamen_v24_oppgave2_palindrom.c  main.c  program.c
oppgave_3/: CMakeLists.txt  main  makefile
oppgave_3/include/: main.h  menuApplication.h  orderList.h  tableReservationList.h
oppgave_3/src/: main.c  menuApplication.c  orderList.c  tableReservationList.c
oppgave_4/: eksamen_v24_oppgave4  main  makefile
oppgave_4/include/: eksamen_v24_oppgave4.h  main.h
oppgave_4/src/: eksamen_v24_oppgave4.c  main.c  sha1.c
oppgave_5/client/: CMakeLists.txt  main  makefile
oppgave_5/client/include/: client.h  server.h
oppgave_5/client/src/: client.c  main.c  server.c
oppgave_5/old_client/: main
oppgave_5/old_client/include/: client.h  main.h
oppgave_5/old_client/src/: client.c
oppgave_5/server/: CMakeLists.txt  main  makefile
oppgave_5/server/include/: main.h  server.h
oppgave_5/server/src/: main.c  server.c
oppgave_6/: CMakeLists.txt  main  makefile
oppgave_6/include/: beautifier.h  linkedList.h  main.h  newNewBeautifier.h
oppgave_6/src/: beautified_oppgave6_test.c  beautifier.c  linkedList.c  main.c  newBeautifier.c  newNewBeautifier.c  oppgave6_test.c  oppgave_6.c
template/: CMakeLists.txt
